<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imgFotoPerfil"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:src="@drawable/foto_perfil"
        android:layout_gravity="center"
        android:layout_margin="20dp"
        />
    


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
       android:text="@string/txt_nomeUsuario"
        android:textSize="18sp"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:gravity="center" />
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:layout_margin="20dp"
        android:background="@drawable/borda_scroll"
        >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txt_descricao"
            android:textSize="14sp"
            android:textColor="@color/black"
            />

    </ScrollView>

    
    <Button
        android:id="@+id/btProjetos"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txt_botao_projetos"
        android:textSize="18sp"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:backgroundTint="@color/blue"
        android:padding="15dp"
        android:layout_marginHorizontal="100dp"
        />
    <Button
        android:id="@+id/btContato"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txt_botao_contato"
        android:textSize="18sp"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:backgroundTint="@color/blue"
        android:padding="15dp"
        android:layout_marginHorizontal="100dp"
        />
    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/blue"
        android:layout_margin="20dp"/>




</LinearLayout>