<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".Projetos">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toobarProjetos"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:title="@string/title_toolbar_projetos"
        app:titleTextColor="@color/white"
        app:navigationIcon="@drawable/ic_voltar"
        android:background="@color/black"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />
<ImageView
    android:id="@+id/imgProjetos1"
    android:layout_width="120dp"
    android:layout_height="120dp"
    android:src="@drawable/projeto_barbearia"
    android:layout_margin="20dp"
    app:layout_constraintTop_toBottomOf="@id/toobarProjetos"
    app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/txtProjeto1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_projeto1"
        android:textSize="18sp"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:layout_marginTop="30dp"
        android:layout_marginHorizontal="20dp"
        app:layout_constraintTop_toBottomOf="@id/toobarProjetos"
        app:layout_constraintStart_toEndOf="@id/imgProjetos1"
        />

    <Button
        android:id="@+id/btProjeto1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:layout_marginTop="16dp"
        android:backgroundTint="@color/red"
        android:textSize="14sp"
        android:textColor="@color/white"
        android:text="@string/txt_botao_projetos_pessoais"
        android:textStyle="bold"
        app:cornerRadius="32dp"
        android:textAllCaps="false"
        app:layout_constraintTop_toBottomOf="@+id/txtProjeto1"
        app:layout_constraintStart_toEndOf="@+id/imgProjetos1"

         />
    <ImageView
        android:id="@+id/imgProjetos2"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:src="@drawable/projeto_pizzaria"
        android:layout_margin="20dp"
        app:layout_constraintTop_toBottomOf="@id/imgProjetos1"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/txtProjeto2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_projeto2"
        android:textSize="18sp"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:layout_marginTop="40dp"
        android:layout_marginHorizontal="20dp"
        app:layout_constraintTop_toBottomOf="@id/btProjeto1"
        app:layout_constraintStart_toEndOf="@id/imgProjetos1"
        />

    <Button
        android:id="@+id/btProjeto2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        android:layout_marginTop="16dp"
        android:backgroundTint="@color/red"
        android:textSize="14sp"
        android:textColor="@color/white"
        android:text="@string/txt_botao_projetos_pessoais"
        android:textStyle="bold"
        app:cornerRadius="32dp"
        android:textAllCaps="false"
        app:layout_constraintTop_toBottomOf="@+id/txtProjeto2"
        app:layout_constraintStart_toEndOf="@+id/imgProjetos2"

        />
    <ImageView
        android:id="@+id/imgProjetos3"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:src="@drawable/projeto_marcenaria"
        android:layout_margin="20dp"
        app:layout_constraintTop_toBottomOf="@id/imgProjetos2"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/txtProjeto3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_projeto3"
        android:textSize="18sp"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:layout_marginTop="40dp"
        android:layout_marginHorizontal="20dp"
        app:layout_constraintTop_toBottomOf="@id/btProjeto2"
        app:layout_constraintStart_toEndOf="@id/imgProjetos3"
        />

    <Button
        android:id="@+id/btProjeto3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        android:layout_marginTop="16dp"
        android:backgroundTint="@color/red"
        android:textSize="14sp"
        android:textColor="@color/white"
        android:text="@string/txt_botao_projetos_pessoais"
        android:textStyle="bold"
        app:cornerRadius="32dp"
        android:textAllCaps="false"
        app:layout_constraintTop_toBottomOf="@+id/txtProjeto3"
        app:layout_constraintStart_toEndOf="@+id/imgProjetos3"

        />



</androidx.constraintlayout.widget.ConstraintLayout>